@@ -429,6 +429,10 @@ Other changes:
    reach at least one given recipient.
    Bugzilla Report 36446.
 
+ * two new properties allow MailLogger to send a fixed text instead of
+   the log file.
+   Bugzilla Report 38029.
+
 Changes from Ant 1.7.0 TO Ant 1.7.1
 =============================================
 
